--- a/style.css
+++ b/style.css
@@ -114,4 +114,10 @@ ul li span:hover {
   width: 80%;
   margin-right: auto;
   }
+  ul li span{
+    align-items: center;
+    margin-left: auto;
+    
+    margin-right: auto;
+    }
 }
