--- a/style.css
+++ b/style.css
@@ -45,6 +45,22 @@ header h1 {
     cursor: pointer;
     transition: 0.4s ease-out;
 }
+#clearallbtn{
+    margin: 5px;
+    padding: 8px;
+    background-color: rgb(230, 13, 9);
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: 0.4s ease-out;
+    display: none;
+    opacity: 0.8;
+}
+#clearallbtn:hover{
+    opacity: 1;
+}
 .textbox::placeholder {
     color: rgb(7, 5, 47);
     padding: 2px;
