--- a/style.css
+++ b/style.css
@@ -37,13 +37,14 @@ header h1 {
 .btn {
     margin: 5px;
     padding: 8px;
-    background-color: rgb(21, 117, 32);
+    background-color: rgba(21, 117, 32);
     color: white;
     outline: none;
     border: none;
     border-radius: 2px;
     cursor: pointer;
     transition: 0.4s ease-out;
+    opacity: 0.8;
 }
 #clearallbtn{
     margin: 5px;
@@ -67,7 +68,7 @@ header h1 {
     opacity: 0.5;
 }
 .btn:hover {
-    opacity: 0.8;
+    opacity: 1;
 }
 #tasks {
     color: white;
@@ -107,9 +108,9 @@ ul li span {
     right: 0;
     width: 50px;
     text-align: center;
-    background-color: rgb(229, 41, 41);
+    background-color:rgb(21, 117, 32);
     color: white;
-    border-radius: 2px;
+   
     opacity: 0.8;
     transition: 0.9s ease-out;
 }
@@ -128,6 +129,12 @@ ul li span:hover {
         align-items: center;
         margin-left: auto;
         margin-right: auto;
+        opacity: 1;
+    }
+    .btn{
+        opacity: 1;
+    }
+    #clearallbtn{
         opacity: 1;
     }
 }
