Added Edit Button

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header h1 {
 .btn {
     margin: 5px;
     padding: 8px;
-    background-color: rgba(21, 117, 32);
+    background-color: rgb(21, 117, 32);
     color: white;
     outline: none;
     border: none;
@@ -84,6 +84,8 @@ ul {
     width: 500px;
 }
 ul li {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     list-style: none;
     background-color: white;
@@ -110,14 +112,27 @@ ul li span {
     text-align: center;
     background-color:rgb(21, 117, 32);
     color: white;
-   
     opacity: 0.8;
     transition: 0.9s ease-out;
 }
 ul li span:hover {
     opacity: 1;
 }
-
+.sp1{
+    position: absolute;
+    /* text-align: center; */
+    width: 10%;
+    background-color: rgb(49, 49, 187);
+    color: white;
+    opacity: 0.8;
+    transition: 0.9s ease-out;
+    /* margin-left: 357px; */
+    top: 0;
+    right: 10%;
+    padding: 13px;
+    border: none;
+    outline: 0;
+}
 @media screen and (max-width: 800px) {
     ul li {
         align-items: center;
@@ -135,6 +150,12 @@ ul li span:hover {
         opacity: 1;
     }
     #clearallbtn{
+        opacity: 1;
+    }
+    .sp1{
+        align-items: center;
+        margin-left: 259px;
+        margin-right: auto;
         opacity: 1;
     }
 }
